--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
